--- a/public/sass/components/_flowButtons.scss
+++ b/public/sass/components/_flowButtons.scss
@@ -17,6 +17,7 @@
   background: lighten($detail-color, 7%);
   border: 2px solid $detail-color;
   color: white;
+  overflow: hidden;
   &:target {
     outline: none;
     color: white;
@@ -24,6 +25,9 @@
   &:hover {
     background: $detail-color;
     color: white;
+  }
+  span {
+    display: block;
   }
 }
 
@@ -34,6 +38,7 @@
   color: white;
   margin-bottom: 0;
   margin-top: 0;
+  overflow: hidden;
   &:target {
     outline: none;
     color: white;
@@ -47,7 +52,6 @@
   }
   span {
     display: block;
-    margin: 0;
   }
 }
 
